src/main/java/com/example/citronix/web/errors/ChampMustUnderException.java
package com.example.citronix.web.errors;

public class ChampMustUnderException extends RuntimeException{
    public ChampMustUnderException(String message) {
        super(message);
    }
}
